Added responsive images

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-6 about-us__image">
-						<img src="assets/images/machines-91849.jpg" alt="sparta gym">
+						<img sizes="(min-width: 680px) 700px, 100vw" srcset="assets/images/machines-91849.jpg 700w, assets/images/machines-91849_x2.jpg 1400w" alt="sparta gym inside">
 					</div>
 					<div class="col-lg-5 offset-lg-1">
 						<h2>About Us</h2>
@@ -90,7 +90,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="card">
-						  <img class="card-img-top" src="assets/images/trainer_1.jpg" alt="John Spring Picture">
+						  <img class="card-img-top" sizes="400px" srcset="assets/images/trainer_1.jpg 400w, assets/images/trainer_1_x2.jpg 800w" alt="John Spring Picture">
 						  <div class="card-block">
 						    <h4 class="card-title">John Spring</h4>
 							<p class="trainer-title">Personal Trainer</p>
@@ -100,7 +100,7 @@
 					</div>
 					<div class="col-md-4">
 						<div class="card">
-						  <img class="card-img-top" src="assets/images/trainer_2.jpg" alt="Luke Summer Picture">
+						  <img class="card-img-top" sizes="400px" srcset="assets/images/trainer_2.jpg 400w, assets/images/trainer_2_x2.jpg 800w" alt="Luke Summer Picture">
 						  <div class="card-block">
 							<h4 class="card-title">Luke Summer</h4>
 							<p class="trainer-title">MMA Trainer</p>
@@ -110,7 +110,7 @@
 					</div>
 					<div class="col-md-4">
 						<div class="card">
-						  <img class="card-img-top" src="assets/images/trainer_3.jpg" alt="Frank Winter Picture">
+						  <img class="card-img-top" sizes="400px" srcset="assets/images/trainer_3.jpg 400w, assets/images/trainer_3_x2.jpg 800w" alt="Frank Winter Picture">
 						  <div class="card-block">
 							<h4 class="card-title">Frank Winter</h4>
 							<p class="trainer-title">Bodybuilding Trainer</p>
@@ -142,7 +142,7 @@
 						  <div class="card-block">
 						    <p class="card-text"><span>$49.99</span><br/>Regural price $79.99</p>
 						  </div>
-						  <img class="card-img-top" src="assets/images/morning.jpg" alt="John Spring Image">
+						  <img class="card-img-top" sizes="400px" srcset="assets/images/morning.jpg 400w, assets/images/morning_x2.jpg 800w" alt="John Spring Image">
 						  <div class="card-footer">
 						    <a href="#" class="btn btn-primary" role="button">More</a>
 						  </div>
@@ -156,7 +156,7 @@
 						  <div class="card-block">
 						    <p class="card-text"><span>$99.99</span> <br/>Regural price $129.99</p>
 						  </div>
-						  <img class="card-img-top" src="assets/images/open.jpg" alt="John Spring Image">
+						  <img class="card-img-top" sizes="400px" srcset="assets/images/open.jpg 400w, assets/images/open_x2.jpg 800w" alt="John Spring Image">
 						  <div class="card-footer">
 						    <a href="#" class="btn btn-primary" role="button">More</a>
 						  </div>
@@ -170,7 +170,7 @@
 						  <div class="card-block">
 						    <p class="card-text"><span>$79.99</span> <br/>Regural price $99.99</p>
 						  </div>
-						  <img class="card-img-top" src="assets/images/weekend.jpg" alt="John Spring Image">
+						  <img class="card-img-top" sizes="400px" srcset="assets/images/weekend.jpg 400w, assets/images/weekend_x2.jpg 800w" alt="John Spring Image">
 						  <div class="card-footer">
 						    <a href="#" class="btn btn-primary" role="button">More</a>
 						  </div>
@@ -186,7 +186,7 @@
 				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit architecto.</p>
 				<div class="row">
 					<div class="col-md-4 testimonials__item">
-						<img src="assets/images/testimony_1.jpg" class="rounded-circle" alt="Brad Picture">
+						<img sizes="200px" srcset="assets/images/testimony_1.jpg 200w, assets/images/testimony_1_x2.jpg 400w" class="rounded-circle" alt="Brad Picture">
 						<h4>Brad Jones</h4>
 						<span class="fa fa-quote-left"></span>
 						<blockquote class="testimonials__quote">
@@ -194,7 +194,7 @@
 						</blockquote>
 					</div>
 					<div class="col-md-4 testimonials__item">
-						<img src="assets/images/testimony_2.jpg" class="rounded-circle" alt="Jane Picture">
+						<img sizes="200px" srcset="assets/images/testimony_2.jpg 200w, assets/images/testimony_2_x2.jpg 400w" class="rounded-circle" alt="Jane Picture">
 						<h4>Jane Doe</h4>
 						<span class="fa fa-quote-left"></span>
 						<blockquote class="testimonials__quote">
@@ -202,7 +202,7 @@
 						</blockquote>
 					</div>
 					<div class="col-md-4 testimonials__item">
-						<img src="assets/images/testimony_3.jpg" class="rounded-circle" alt="Jennifer Picture">
+						<img sizes="200px" srcset="assets/images/testimony_3.jpg 200w, assets/images/testimony_3_x2.jpg 400w" class="rounded-circle" alt="Jennifer Picture">
 						<h4>Jennifer Lockwood</h4>
 						<span class="fa fa-quote-left"></span>
 						<blockquote class="testimonials__quote">
