Added webpack and animations script

--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
 				<h2 class="text-center">Our Trainers</h2>
 				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ut porro voluptate, corporis repellendus necessitatibus sequi ex commodi.</p>
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-4 animate">
 						<div class="card">
 						  <img class="card-img-top" sizes="400px" srcset="assets/images/trainer_1.jpg 400w, assets/images/trainer_1_x2.jpg 800w" alt="John Spring Picture">
 						  <div class="card-block">
@@ -98,7 +98,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 animate">
 						<div class="card">
 						  <img class="card-img-top" sizes="400px" srcset="assets/images/trainer_2.jpg 400w, assets/images/trainer_2_x2.jpg 800w" alt="Luke Summer Picture">
 						  <div class="card-block">
@@ -108,7 +108,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 animate">
 						<div class="card">
 						  <img class="card-img-top" sizes="400px" srcset="assets/images/trainer_3.jpg 400w, assets/images/trainer_3_x2.jpg 800w" alt="Frank Winter Picture">
 						  <div class="card-block">
@@ -134,7 +134,7 @@
 				<h2 class="text-center">Subscriptions</h2>
 				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, soluta dolore deserunt quos nemo!</p>
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-4 animate">
 						<div class="card text-center">
 						  <div class="card-header card-header-morning">
 						    Morning
@@ -148,7 +148,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 animate">
 						<div class="card text-center">
 						  <div class="card-header card-header-open">
 						    Open
@@ -162,7 +162,7 @@
 						  </div>
 						</div>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 animate">
 						<div class="card text-center">
 						  <div class="card-header card-header-weekend">
 						    Weekend
@@ -185,7 +185,7 @@
 				<h2 class="text-center">Testimonials</h2>
 				<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit architecto.</p>
 				<div class="row">
-					<div class="col-md-4 testimonials__item">
+					<div class="col-md-4 testimonials__item animate">
 						<img sizes="200px" srcset="assets/images/testimony_1.jpg 200w, assets/images/testimony_1_x2.jpg 400w" class="rounded-circle" alt="Brad Picture">
 						<h4>Brad Jones</h4>
 						<span class="fa fa-quote-left"></span>
@@ -193,7 +193,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
 						</blockquote>
 					</div>
-					<div class="col-md-4 testimonials__item">
+					<div class="col-md-4 testimonials__item animate">
 						<img sizes="200px" srcset="assets/images/testimony_2.jpg 200w, assets/images/testimony_2_x2.jpg 400w" class="rounded-circle" alt="Jane Picture">
 						<h4>Jane Doe</h4>
 						<span class="fa fa-quote-left"></span>
@@ -201,7 +201,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos optio dolorum adipisci, totam eaque cum praesentium, porro debitis repellendus ex labore fugit asperiores rerum voluptatem unde, voluptatum sunt itaque quia!</p>
 						</blockquote>
 					</div>
-					<div class="col-md-4 testimonials__item">
+					<div class="col-md-4 testimonials__item animate">
 						<img sizes="200px" srcset="assets/images/testimony_3.jpg 200w, assets/images/testimony_3_x2.jpg 400w" class="rounded-circle" alt="Jennifer Picture">
 						<h4>Jennifer Lockwood</h4>
 						<span class="fa fa-quote-left"></span>
@@ -228,7 +228,7 @@
 				<h2 class="text-center">Contact Us</h2>
 				<p class="lead text-center">Temporibus dolor debitis sapiente.</p>
 				<div class="row">
-					<div class="col-lg-6 offset-lg-3">
+					<div class="col-lg-6 offset-lg-3 animate">
 						<form action="contact.php" method="post">
 							<div class="form-group">
 								<label for="name" class="sr-only">Your Name</label>
@@ -358,12 +358,12 @@
  	 	</div>
 	</div>
 
-	<!-- build:js js/vendor.min.js -->
+	<!-- build:js1 js/vendor.min.js -->
 	<script src="js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/tether.min.js"></script>
 	<script src="js/vendor/bootstrap.min.js"></script>
 	<!-- endbuild -->
-	<!-- build:js js/scripts.min.js -->
+	<!-- build:js2 js/scripts.min.js -->
 	<script src="temp/js/scripts.js"></script>
 	<!-- endbuild -->
 </body>
